@@ -1,3 +1,5 @@
+- Added SqlQueryJoinDefinition and refactored to put application in IQueryModifier.Apply.
+
 - Added QueryResultTransformer modifier to allow setting a results transformer.
 
 - Applied patch from Patrick Steele adding support for DiscriminatorLength in mappings. 
